<resources>
    <string name="app_name">Freezy App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- GENERIC -->
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="sort_storage">Sort by storage</string>
    <string name="sort_category">Sort by category</string>
    <string name="only_expired">Only show expired</string>

    <string name="menu_overview">Overview</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_storage">Storage</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>

    <string name="storage">Storage</string>
    <string name="add_storage_btn">Add Storage</string>
    <string name="new_storage_title">New Storage</string>
    <string name="edit_storage_title">Edit Storage</string>
    <string name="storage_name_hint">Storage Name</string>
    <string name="storage_color_hint">Storage Color</string>

    <string name="category">Category</string>
    <string name="add_category_btn">Add Category</string>
    <string name="new_category_title">New Category</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="category_name_hint">Category Name</string>
    <string name="category_color_hint">Category Color</string>

    <string name="add_item_btn">Add Item</string>
    <string name="new_item_title">New Item</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="item_name_hint">Item Name</string>
    <string name="item_unit_hint">Item Unit</string>
    <string name="item_has_expiration">Has expiration date</string>
    <string name="item_old_quantity">Old Quantity:</string>
    <string name="item_new_quantity">New Quantity</string>
    <string name="item_quantity">Quantity</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Passwords are not the same</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="username">"Username"</string>
    <string name="password">Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="not_same_password">Passwords most be the same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="switch_stay_login">Stay logged in</string>
    <string name="action_back_to_login">"Back to login"</string>
    <string name="action_register">"Register account"</string>
    <string name="registered">"Registration sent"</string>
    <string name="fail_registered">"Account didn't register"</string>


    <string name="preference_file_key">AccessTokenFile</string>
    <string name="preference_access_token_key">AccessToken</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>

</resources>